<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ScrollView"
    tools:context="com.example.android.quizz_app.MainActivity">

    <LinearLayout style="@style/Linear_layout">

        <ImageView
            android:id="@+id/image_gb_quiz"
            style="@style/ImageView" />

        <TextView
            android:id="@+id/welcome_text"
            style="@style/Welcome_text"
            android:fontFamily="serif"
            android:text="@string/welcome_message" />

        <View style="@style/View_line" />

        <TextView
            android:id="@+id/title_question_1"
            style="@style/title_questionText"
            android:fontFamily="serif"
            android:text="@string/title_question_1" />

        <TextView
            android:id="@+id/question_1"
            style="@style/questionText"
            android:fontFamily="serif"
            android:text="@string/question_1" />

        <RadioGroup

            android:id="@+id/answer_1"
            style="@style/Radio_group">

            <RadioButton
                android:id="@+id/answer_1_a"
                style="@style/Radio_buttons"
                android:fontFamily="serif"
                android:text="@string/answer_1_a" />

            <RadioButton
                android:id="@+id/answer_1_b"
                style="@style/Radio_buttons"
                android:fontFamily="serif"
                android:text="@string/answer_1_b" />

            <RadioButton
                android:id="@+id/answer_1_c"
                style="@style/Radio_buttons"
                android:fontFamily="serif"
                android:text="@string/answer_1_c" />

            <RadioButton
                android:id="@+id/answer_1_d"
                style="@style/Radio_buttons"
                android:fontFamily="serif"
                android:text="@string/answer_1_d" />

        </RadioGroup>

        <View style="@style/View_line" />

        <TextView
            android:id="@+id/title_question_2"
            style="@style/title_questionText"
            android:fontFamily="serif"
            android:text="@string/title_question_2" />

        <TextView
            android:id="@+id/question_2"
            style="@style/questionText"
            android:fontFamily="serif"
            android:text="@string/question_2" />

        <CheckBox
            android:id="@+id/answer_2_a"
            style="@style/Radio_buttons"
            android:fontFamily="serif"
            android:text="@string/answer_2_a" />

        <CheckBox
            android:id="@+id/answer_2_b"
            style="@style/Radio_buttons"
            android:fontFamily="serif"
            android:text="@string/answer_2_b" />

        <CheckBox
            android:id="@+id/answer_2_c"
            style="@style/Radio_buttons"
            android:fontFamily="serif"
            android:text="@string/answer_2_c" />

        <CheckBox
            android:id="@+id/answer_2_d"
            style="@style/Radio_buttons"
            android:fontFamily="serif"
            android:text="@string/answer_2_d" />

        <View style="@style/View_line" />

        <TextView
            android:id="@+id/title_question_3"
            style="@style/title_questionText"
            android:fontFamily="serif"
            android:text="@string/title_question_3" />

        <TextView
            android:id="@+id/question_3"
            style="@style/questionText"
            android:fontFamily="serif"
            android:text="@string/question_3" />

        <EditText
            android:id="@+id/answer_3"
            style="@style/Edit_text"
            android:backgroundTint="@color/colorPrimary"
            android:fontFamily="serif"
            android:hint="@string/q3_hint" />

        <View

            style="@style/View_line" />

        <TextView
            android:id="@+id/title_question_4"
            style="@style/title_questionText"
            android:fontFamily="serif"
            android:text="@string/title_question_4" />

        <TextView
            android:id="@+id/question_4"
            style="@style/questionText"
            android:fontFamily="serif"
            android:text="@string/question_4"
            />

        <RadioGroup
            android:id="@+id/answer_4"
            style="@style/Radio_group">

            <RadioButton
                android:id="@+id/answer_4_a"
                style="@style/Radio_buttons"
                android:fontFamily="serif"
                android:text="@string/answer_4_a" />

            <RadioButton
                android:id="@+id/answer_4_b"
                style="@style/Radio_buttons"
                android:fontFamily="serif"
                android:text="@string/answer_4_b" />

            <RadioButton
                android:id="@+id/answer_4_c"
                style="@style/Radio_buttons"
                android:fontFamily="serif"
                android:text="@string/answer_4_c" />

            <RadioButton
                android:id="@+id/answer_4_d"
                style="@style/Radio_buttons"
                android:fontFamily="serif"
                android:text="@string/answer_4_d" />

        </RadioGroup>

        <View style="@style/View_line"/>

        <TextView
            android:id="@+id/title_question_5"
            style="@style/title_questionText"
            android:fontFamily="serif"
            android:text="@string/title_question_5" />

        <TextView
            android:id="@+id/question_5"
            style="@style/questionText"
            android:fontFamily="serif"
            android:text="@string/question_5" />

        <RadioGroup
            android:id="@+id/answer_5"
            style="@style/Radio_group">

            <RadioButton
                android:id="@+id/answer_5_a"
                style="@style/Radio_buttons"
                android:fontFamily="serif"
                android:text="@string/answer_5_a" />

            <RadioButton
                android:id="@+id/answer_5_b"
                style="@style/Radio_buttons"
                android:fontFamily="serif"
                android:text="@string/answer_5_b" />

            <RadioButton
                android:id="@+id/answer_5_c"
                style="@style/Radio_buttons"
                android:fontFamily="serif"
                android:text="@string/answer_5_c" />

            <RadioButton
                android:id="@+id/answer_5_d"
                style="@style/Radio_buttons"
                android:fontFamily="serif"
                android:text="@string/answer_5_d" />

        </RadioGroup>

        <View style="@style/View_line" />

        <TextView
            android:id="@+id/title_question_6"
            style="@style/title_questionText"
            android:fontFamily="serif"
            android:text="@string/title_question_6" />

        <TextView
            android:id="@+id/question_6"
            style="@style/questionText"
            android:fontFamily="serif"
            android:text="@string/question_6" />

        <EditText
            android:id="@+id/answer_6"
            style="@style/Edit_text"
            android:backgroundTint="@color/colorPrimary"
            android:fontFamily="serif"
            android:hint="@string/q3_hint" />

        <View style="@style/View_line" />

        <TextView
            android:id="@+id/title_question_7"
            style="@style/title_questionText"
            android:fontFamily="serif"
            android:text="@string/title_question_7" />

        <TextView
            android:id="@+id/question_7"
            style="@style/questionText"
            android:fontFamily="serif"
            android:text="@string/question_7" />

        <RadioGroup
            android:id="@+id/answer_7"
            style="@style/Radio_group">

            <RadioButton
                android:id="@+id/answer_7_a"
                style="@style/Radio_buttons"
                android:fontFamily="serif"
                android:text="@string/answer_7_a" />

            <RadioButton
                android:id="@+id/answer_7_b"
                style="@style/Radio_buttons"
                android:fontFamily="serif"
                android:text="@string/answer_7_b" />

            <RadioButton
                android:id="@+id/answer_7_c"
                style="@style/Radio_buttons"
                android:fontFamily="serif"
                android:text="@string/answer_7_c" />

            <RadioButton
                android:id="@+id/answer_7_d"
                style="@style/Radio_buttons"
                android:fontFamily="serif"
                android:text="@string/answer_7_d"/>

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/submit_button"
                style="@style/Button"
                android:fontFamily="serif"
                android:onClick="submitButton"
                android:text="@string/submit_button"/>

            <Button
                android:id="@+id/reset_button"
                style="@style/Button"
                android:fontFamily="serif"
                android:onClick="resetButton"
                android:text="@string/reset_button"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
